--- a/styles.css
+++ b/styles.css
@@ -38,3 +38,20 @@ body {
 #searchbox:focus {
     border-color: #4d90fe;
 }
+
+#markerList {
+    background-color: #fff;
+    font-family: Roboto;
+    font-size: 15px;
+    font-weight: 300;
+    margin-left: 12px;
+    margin-top: 16px;
+    padding: 0 11px 0 13px;
+    text-overflow: ellipsis;
+    border: 1px solid transparent;
+    border-radius: 2px 0 0 2px;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    outline: none;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+}
