--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ body {
     margin-left: 12px;
     padding: 0 11px 0 13px;
     text-overflow: ellipsis;
-    width: 400px;
+    width: 33%;
 }
 
 #searchbox:focus {
@@ -46,5 +46,5 @@ body {
     font-weight: 300;
     margin-left: 12px;
     padding: 0 11px 0 13px;
-    width: 200px;
+    width: 150px;
 }
