--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body {
     padding: 0;
 }
 
-#map-canvas {
+.info-image {
     height: 100%;
     width: 100%;
 }
@@ -21,6 +21,11 @@ body {
     -moz-box-sizing: border-box;
     outline: none;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+}
+
+#map-canvas {
+    height: 100%;
+    width: 100%;
 }
 
 #searchbox {
