Make list of locations appear selectable in the UI

--- a/styles.css
+++ b/styles.css
@@ -47,4 +47,9 @@ body {
     margin-left: 12px;
     padding: 0 11px 0 13px;
     width: 150px;
+    list-style-type: none;
+}
+
+#markerList li {
+    cursor: pointer;
 }
